@@ -74,7 +74,7 @@ class PostExt extends CActiveRecord
 	public function relations()
 	{
 		return array(
-			'comments'=>array(self::HAS_MANY,'Comment','post_id','order'=>'??.content DESC','with'=>array('post','author'=>array('posts'=>'author'))),
+			'comments'=>array(self::HAS_MANY,'Comment','post_id','order'=>'??.content DESC','with'=>array('post','author.posts.author')),
 		);
 	}
 }
