@@ -16,7 +16,8 @@ Version 1.0.2 to be released
 - New #92: Empty error messages in models are handled better when being displayed (Qiang)
 - New #93: Changed CLinkPager and CListPager so that the messages are internationalized (Qiang)
 - New #95: Added an option to CHtml::activeCheckBox() to define default value if unchecked (Qiang)
-- New #98: Added support to translate messages in different plural forms. Added CChoiceFormat. (Qiang)
+- New #98: Added support to translate messages in different plural forms. Added CChoiceFormat (Qiang)
+- New #103: Added support to use dynamic query options in relational active record (Qiang)
 - New #104: Added support to encode traversable objects using JSON (Qiang)
 - New #111: Implemented nonobtrusive javascript "Get new image" link in CCaptcha (Qiang)
 - New #113: Enhanced CSort so that it is easier to be used with relational active record (Qiang)
